--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -9,16 +9,16 @@
   ],
   "background": {
         "scripts": [
-            "jquery.min.js","replaceText.js","background.js"
+            "includes/js/jquery.min.js","includes/js/replaceText.js","includes/js/background.js"
         ]
   },
   "browser_action": {
-   "default_icon": "icon.png",
+   "default_icon": "images/icon.png",
    "default_popup": "popup.html"
   },
   "content_scripts": [{
-    "css": ["styles.css"],
-    "js": ["jquery.min.js","replaceText.js","content.js"],
+    "css": ["includes/css/styles.css"],
+    "js": ["includes/js/jquery.min.js","includes/js/replaceText.js","includes/js/content.js"],
     "matches": ["<all_urls>"]
   }]
 
